# launch-structure-verifier

./: Cargo.toml  nixpacks.toml
frontend/: index.html
src/: lib.rs  main.rs  server.rs  types.rs
src/api/: analyze.rs  cached_analyze.rs  mod.rs  types.rs
src/cache/: mod.rs  simple_cache.rs
src/checks/: freeze_authority.rs  holder_concentration.rs  mint_authority.rs  mod.rs  ownership.rs  standard_sanity.rs  token_age.rs
src/providers/: alchemy.rs  helius.rs  mocks.rs  mod.rs
src/scoring/: aggregator.rs  mod.rs
tests/: integration_test.rs
